--- a/docs/GDPs/gdp-0002.rst
+++ b/docs/GDPs/gdp-0002.rst
@@ -98,7 +98,7 @@ Model developers already understand the idea of offsets with the stencil notatio
 All that needs to be changed in the frontend is adding the `region()` specifier, **so all existing GT4Py code will continue to work as before.**
 The new `region()` specifier accepts what are essentially slices that describe the horizontal iteration space in a way that describes the process' local iteration space, and can also represent the global space if the space is domain decomposed and computed by a set of processes.
 
-It may not be immediately obvious that this supports the notion of a global iteration space, but the object passed to `region()` is constructed by the specific application, and can embed details about the domain partitioning.
+It may not be immediately obvious that this supports the notion of a global iteration space, but the object passed to `region()` is constructed by the user, and can embed details about the domain partitioning. It is the responsibility of this object to translate from a global index provided by the user to a local index used by gt4py.
 The processes that do not have an global iteration space index intersection with the provided slices simply see the empty set for the region and simply skip the loops.
 
 
